# sudoku_solver

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md
.github/workflows/: cmake.yml
Tests/: grid2.txt
Tests/TestRes/: grid1.txt.expect  grid2.txt.expect
src/: CMakeLists.txt  Pixels.c  Pixels.h  build.sh  construct.c  construct.h  main.c  sudoku.c  sudoku.h
